--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -20,22 +20,13 @@ issueTrackerURL="https://github.com/Ahrondus/Minecraft-MUE-Mod/issues" #optional
 modId="moreusefuleggs" #mandatory
 
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.0" #mandatory
+version="1.0.8" #mandatory
 
 # A display name for the mod
 displayName="More Useful Eggs" #mandatory
 
-# A URL to query for updates for this mod. See the JSON update specification <here>
-updateJSONURL="http://myurl.me/" #optional
-
-# A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL="http://example.com" #optional
-
-# A file name (in the root of the mod JAR) containing a logo for display
-logoFile="examplemod.png" #optional
-
 # A text field displayed in the mod UI
-credits="Ahrondus" #optional
+credits="Ahrondus for code, Verlia for textures" #optional
 
 # A text field displayed in the mod UI
 authors="Ahrondus" #optional
@@ -46,7 +37,6 @@ description='''
 >>>This mod adds multiple different recipies for eggs to make them a bit more useful
    in the early game. Enjoy!  ---Ahrondus
 '''
-
 
 
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
